[project]
name = "tbpp_cf3"
version = "0.0.1"
authors = [
  { name="Nico Strasdat", email="nstrasdat@gmail.com" },
]
description = "Compact Models for the Temporal Bin Packing Problem with Fire-Ups"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  'gurobipy',
  'numpy',
  'pandas'
]

[project.urls]
Homepage = "https://github.com/wotzlaff/tbpp-cf3"
Issues = "https://github.com/wotzlaff/tbpp-cf3/issues"